--- a/src/main/resources/lang/default.lang
+++ b/src/main/resources/lang/default.lang
@@ -1294,6 +1294,18 @@ cat types:
 	jellie: jellie
 	all_black: all black
 
+# -- Wolf Variants --
+wolf variants:
+	ashen: ashen
+	black: black
+	chestnut: chestnut
+	pale: pale
+	rusty: rusty
+	snowy: snowy
+	spotted: spotted
+	striped: striped
+	woods: woods
+
 # -- Damage Causes --
 damage causes:
 	contact: contact
@@ -2343,6 +2355,7 @@ types:
 	blockdata: block data¦s @a
 	healreason: heal reason¦s @a
 	cattype: cat type¦s @a
+	wolfvariant: wolf variant¦s @a
 	gamerule: gamerule¦s @a
 	attributetype: attribute type¦s @a
 	enchantmentoffer: enchantment offer¦s @an
