--- a/src/main/resources/lang/default.lang
+++ b/src/main/resources/lang/default.lang
@@ -2373,6 +2373,7 @@ types:
 	experience.pattern: (e?xp|experience( points?)?)
 	classinfo: type¦s @a
 	visualeffect: visual effect¦s @a
+	blockstate: blockstate¦s
 
 	# Hooks
 	money: money
