--- a/src/main/resources/lang/default.lang
+++ b/src/main/resources/lang/default.lang
@@ -2276,7 +2276,7 @@ transform reasons:
 	infection: infection, villager infection
 
 # -- Change Reasons --
-change reasons:
+experience change reasons:
 	plugin: plugin
 	pickup_orb: orb pickup, pickup orb
 
@@ -2359,7 +2359,7 @@ types:
 	quitreason: quit reason¦s @a
 	inventoryclosereason: inventory close reason¦s @an
 	transformreason: transform reason¦s @a
-	changereason: change reason¦s @a
+	experiencechangereason: experience change reason¦s @a
 
 	# Skript
 	weathertype: weather type¦s @a
