--- a/src/main/resources/lang/default.lang
+++ b/src/main/resources/lang/default.lang
@@ -2354,6 +2354,7 @@ types:
 	quitreason: quit reason¦s @a
 	inventoryclosereason: inventory close reason¦s @an
 	transformreason: transform reason¦s @a
+	beacon: beacon¦s @a
 
 	# Skript
 	weathertype: weather type¦s @a
